@@ -1,5 +1,13 @@
 2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/GrayPaintScale.java
+	(getPaint): Use constrained value to calculate gray scale value,
+	* tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
+	(testConstructor): New test method,
+	(testGetPaint): Likewise.
+	
+2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
 	(drawItem): Apply margin in a way that works for inverted axes.
 	
